style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* variables */

:root {
  --pink-bg: #fbf5f5;
  --orange: #f3684a;
  --almost-black: #2d2a2a;
  --footer-text: #7d7878;
}

/*header start*/
/*header dev done by Popeashiedu*/
header {
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url(https://res.cloudinary.com/dhypceiuh/image/upload/v1591737301/img/homepage_nigy7v.jpg);
  background-size: 100%;

  height: 81vh;

  color: #ffffff;
}

/*header end*/

/*navbar start*/
#nav-bar {
  display: flex;
  padding: 2rem;
  list-style: none;
  margin: auto;
}

#inner-nav ul li a {
  text-decoration: none;
  color: #f3684a;
  transition: all 0.3s ease-in-out;
}

/* #inner-nav ul li a:hover {
  color: #f3684a;
} */

.navlist li {
  list-style: none;
}

#hamclose {
  display: none;
}

.navlist {
  width: 100%;
  flex-direction: column;

}

.navlist.show {
  display: flex;
  text-align: center;
  line-height: 32px;
  transition: .9s ease-in-out;
  box-shadow: 0px 4px 3px 0px #f9f9f9;
  padding: 2%;
  position: absolute;
  top: 23%;
  left: 9%;
  background: #fff;
  width: 83%;
  border: 2px solid var(--orange);
}

.hamburger,
.hamclose {
  background-color: transparent;
  border: none;
  cursor: pointer;
  color: #fff;
  margin-right: 6%;
}

.hamburger:focus,
.hamclose:focus {
  outline: none;
}

.fa-bars,
.fa-times {
  font-size: 1.5rem;
}

/*navbar end*/

/*Header content starts*/
#header-content {
  max-width: 77%;
}

#heading p {
  padding: 0rem;
  font-size: 150%;
  font-weight: 500;
  letter-spacing: 0.21rem;
  line-height: 130.19%;
  font-style: normal;
}

#heading {
  margin-top: 1rem;
  background: #f3684a;
}

#slogan {
  margin-top: 21%;
}

#slogan p {
  font-size: 550%;
  font-weight: bold;
  line-height: 125.19%;
}

#appeal {
  margin-top: 5%;
}

/*Header content ends*/

/*Check-in form starts*/
form {
  display: flex;
  justify-content: space-between;
  margin-top: -4.5rem;
  background: #ffffff;
}

#form {
  max-width: 70%;
  margin: auto;
  /* height: 50vh; */
}

.form-element {
  display: flex;
  flex-direction: column;
  margin: 1.5rem;
  padding: 1rem;
  margin-top: 4%;
}

.form-label {
  color: #f3684a;
  font-weight: bold;
  margin-bottom: 0.7rem;
}

.inputs {
  width: 150%;
  padding: 0.7rem;
  background: #fbf5f5;
  border: none;
  color: #b8b3b3;
}

#btn-header {
  width: 50%;
  background: #f3684a;
  border: none;
  color: #ffffff;
  font-size: 0.875rem;
  cursor: pointer;
  transition: all 0.3s ease-in-out;
  padding: 4%;
  margin-bottom: 10%;
  margin-left: 24%;
}

#btn-header:focus {
  outline: 0;
}

#btn-header:hover {
  color: #f3684a;
  background: #ffffff;
  box-shadow: 0 0 0 2px #f3684a;
}

/*Check-in form ends*/

/*media queries*/
@media all and (min-width: 0px) {
  header {
    background-size: cover;
    background-position: 30% 77%;
    max-width: 100vw;
    padding: 1px;
  }

  #nav-bar {
    padding: 0rem;
    padding-top: 1rem;
    margin-left: 0;
    justify-content: space-between;
  }

  .logo {
    width: 45%;
    margin-left: 16%;
  }

  #heading p {
    background: #f3684a;
    padding: 0.3rem;
    font-size: 0.575rem;
    text-align: center;
  }

  #heading {
    max-width: 100%;
    width: 63%;
    margin-left: -9%;
  }

  #slogan,
  #appeal {
    margin-left: 0rem;
    text-align: center;
  }

  #header-content {
    display: flex;
    flex-direction: column;
    max-width: 93%;
    justify-items: center;
    align-items: center;
  }

  #slogan p {
    font-size: 105%;
    font-weight: bold;
    line-height: 125.19%;
    text-align: center;
    margin-top: 1rem;
  }

  #appeal p {
    font-size: 0.575rem;
    text-align: center;
    margin-top: 8%;
    line-height: 1.7;
  }

  #form {
    max-width: 100vw;
    margin: 0;
  }

  #check-in {
    display: flex;
    flex-direction: column;
    padding: 0 11%;
  }

  .form-element {
    display: flex;
    flex-direction: column;
    margin: 0.3rem;
    padding: 0.5rem;
  }

  .form-label {
    color: #f3684a;
    font-weight: 500;
    font-size: small;
    margin-bottom: 0.2rem;
    text-align: center;
  }

  .inputs {
    width: 100%;
    padding: 0.7rem;
  }

  #btn {
    width: 91%;
    background: #f3684a;
    border: none;
    color: #ffffff;
    font-size: 78%;
    cursor: pointer;
    padding: 0.8rem;
    margin: auto auto 1rem auto;
  }
}
/* ... */

